# sub-model

./: Cargo.toml  readme.md
examples/: code_gen_expand.rs
src/: lib.rs  utils.rs
src/bridge/: mod.rs  sub_model_def.rs  sub_model_field_def.rs
src/bridges/: field.rs  mod.rs  model.rs
src/bridges/mid_model/: field_construct.rs  mod.rs
src/code_generate/: extra_derives.rs  field_to_token.rs  mod.rs  sub_model.rs  sub_model_convert_gen.rs  sub_model_field_construct_gen.rs  sub_model_field_gen.rs  sub_model_fields.rs  sub_model_structure.rs  sub_model_to_token.rs
src/darling_models/: mod.rs  sub_model_fields.rs
src/darling_models/container_argument/: mod.rs  partial_model.rs
src/darling_models/container_argument/partial_model/: field_define.rs
src/darling_models/field_input/: field_item.rs  field_marco.rs  having_field.rs  mod.rs  type_mapping.rs
src/darling_models/field_input/sub_model_field_define/: having_field.rs  ignore_field.rs  mod.rs
src/darling_models/field_item_infos/: field_item.rs  field_marco.rs  having_field.rs  mod.rs
src/darling_models/field_item_infos/field_item_with_model_type/: field_def.rs  field_model_type.rs  mod.rs
src/darling_models/struct_input/: extra_fields.rs  fields.rs  mod.rs  sub_model_derive.rs  sub_model_item.rs
src/darling_models/struct_item_infos/: extra_fields.rs  mod.rs  sub_model_derive.rs  sub_model_item.rs
src/darling_models/utils/: err_prefab.rs  extra_attr.rs  field_server.rs  from_meta_list.rs  like.rs  mod.rs  nest_meta_list.rs  only_nest_meta_list.rs  path_to_ident.rs  vis.rs
tests/: test_generate.rs
(+8 files in other folders)
